RESOLVED FIXED 121614
[CSS Shapes] Fix handling of top margin on float with shape-outside
https://bugs.webkit.org/show_bug.cgi?id=121614
Summary [CSS Shapes] Fix handling of top margin on float with shape-outside
Bem Jones-Bey
Reported 2013-09-19 09:45:55 PDT
Fix handling of top margin on float with shape-outside
Attachments
Patch (17.56 KB, patch)
2013-09-19 09:48 PDT, Bem Jones-Bey
no flags
Updated patch (17.64 KB, patch)
2013-09-19 11:00 PDT, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2013-09-19 09:48:30 PDT
Alexandru Chiculita
Comment 2 2013-09-19 10:15:10 PDT
Comment on attachment 212078 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212078&action=review > Source/WebCore/rendering/shapes/ShapeOutsideInfo.cpp:61 > + LayoutUnit marginBefore = containingBlock->marginBeforeForChild(m_renderer); > + if (marginBefore < 0) > + marginBefore = LayoutUnit(); nit: might look better to use the max(0, value) function instead.
Bem Jones-Bey
Comment 3 2013-09-19 11:00:39 PDT
Created attachment 212081 [details] Updated patch Update for review feedback
WebKit Commit Bot
Comment 4 2013-09-19 11:17:35 PDT
Comment on attachment 212081 [details] Updated patch Clearing flags on attachment: 212081 Committed r156106: <http://trac.webkit.org/changeset/156106>
WebKit Commit Bot
Comment 5 2013-09-19 11:17:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.